--- a/book-details.html
+++ b/book-details.html
@@ -6,7 +6,7 @@
     <title>Détails du livre | BookExchange</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <!-- Navigation -->
@@ -67,7 +67,7 @@
             <!-- Book Cover -->
             <div class="col-md-4 mb-4">
                 <div class="book-cover-large shadow">
-                    <img src="assets/images/book-placeholder.svg" alt="Book Cover" class="img-fluid book-cover" id="bookCover">
+                    <img src="book-placeholder.svg" alt="Book Cover" class="img-fluid book-cover" id="bookCover">
                     <div class="book-status-badge" id="bookStatusBadge"></div>
                 </div>
             </div>
@@ -232,11 +232,11 @@
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="assets/js/auth.js"></script>
-    <script src="assets/js/books.js"></script>
-    <script src="assets/js/exchanges.js"></script>
-    <script src="assets/js/messages.js"></script>
-    <script src="assets/js/book-details.js"></script>
-    <script src="assets/js/main.js"></script>
+    <script src="auth.js"></script>
+    <script src="books.js"></script>
+    <script src="exchanges.js"></script>
+    <script src="messages.js"></script>
+    <script src="book-details.js"></script>
+    <script src="main.js"></script>
 </body>
 </html>
