--- a/catalog.html
+++ b/catalog.html
@@ -6,7 +6,7 @@
     <title>Catalogue - BookExchange</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <!-- Navigation -->
@@ -86,7 +86,7 @@
                 <div class="col-md-3">
                     <div class="card book-card h-100">
                         <div class="position-relative">
-                            <img src="/assets/images/le-seigneur-des-anneaux.jpg" class="card-img-top" alt="Couverture du livre">
+                            <img src="le-seigneur-des-anneaux.jpg" class="card-img-top" alt="Couverture du livre">
                             <span class="book-status status-available">Disponible</span>
                         </div>
                         <div class="card-body">
@@ -100,7 +100,7 @@
                 <div class="col-md-3">
                     <div class="card book-card h-100">
                         <div class="position-relative">
-                            <img src="/assets/images/OIP.webp" class="card-img-top" alt="Couverture du livre">
+                            <img src="/OIP.webp" class="card-img-top" alt="Couverture du livre">
                             <span class="book-status status-available">Disponible</span>
                         </div>
                         <div class="card-body">
@@ -114,7 +114,7 @@
                 <div class="col-md-3">
                     <div class="card book-card h-100">
                         <div class="position-relative">
-                            <img src="/assets/images/1984.jpeg" class="card-img-top" alt="Couverture du livre">
+                            <img src="1984.jpeg" class="card-img-top" alt="Couverture du livre">
                             <span class="book-status status-available">Disponible</span>
                         </div>
                         <div class="card-body">
@@ -128,7 +128,7 @@
                 <div class="col-md-3">
                     <div class="card book-card h-100">
                         <div class="position-relative">
-                            <img src="/assets/images/etr.jpeg" class="card-img-top" alt="Couverture du livre">
+                            <img src="etr.jpeg" class="card-img-top" alt="Couverture du livre">
                             <span class="book-status status-available">Disponible</span>
                         </div>
                         <div class="card-body">
@@ -196,8 +196,8 @@
 
     <!-- Scripts -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="assets/js/auth.js"></script>
-    <script src="assets/js/books.js"></script>
-    <script src="assets/js/main.js"></script>
+    <script src="auth.js"></script>
+    <script src="books.js"></script>
+    <script src="main.js"></script>
 </body>
 </html>
