--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>BookExchange - Échange de livres entre étudiants</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <!-- Navigation -->
@@ -65,7 +65,7 @@
                     </div>
                 </div>
                 <div class="col-lg-6">
-                    <img src="assets/images/acc.svg" alt="Échange de livres" class="img-fluid">
+                    <img src="acc.svg" alt="Échange de livres" class="img-fluid">
                 </div>
             </div>
         </div>
@@ -121,7 +121,7 @@
                 <div class="col-md-3">
                     <div class="card book-card h-100">
                         <div class="position-relative">
-                            <img src="/assets/images/le-seigneur-des-anneaux.jpg" class="card-img-top" alt="Couverture du livre">
+                            <img src="le-seigneur-des-anneaux.jpg" class="card-img-top" alt="Couverture du livre">
                             <span class="book-status status-available">Disponible</span>
                         </div>
                         <div class="card-body">
@@ -163,7 +163,7 @@
                 <div class="col-md-3">
                     <div class="card book-card h-100">
                         <div class="position-relative">
-                            <img src="/assets/images/etr.jpeg" class="card-img-top" alt="Couverture du livre">
+                            <img src="etr.jpeg" class="card-img-top" alt="Couverture du livre">
                             <span class="book-status status-available">Disponible</span>
                         </div>
                         <div class="card-body">
@@ -295,7 +295,8 @@
 
     <!-- Scripts -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="assets/js/auth.js"></script>
-    <script src="assets/js/main.js"></script>
+    <script src="auth.js"></script>
+    <script src="main.js"></script>
 </body>
+
 </html>
