--- a/messages.html
+++ b/messages.html
@@ -6,7 +6,7 @@
     <title>Messages - BookExchange</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <!-- Navigation -->
@@ -154,8 +154,8 @@
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="assets/js/auth.js"></script>
-    <script src="assets/js/messages.js"></script>
-    <script src="assets/js/main.js"></script>
+    <script src="auth.js"></script>
+    <script src="messages.js"></script>
+    <script src="main.js"></script>
 </body>
 </html>
