--- a/catalog.html
+++ b/catalog.html
@@ -100,7 +100,7 @@
                 <div class="col-md-3">
                     <div class="card book-card h-100">
                         <div class="position-relative">
-                            <img src="/OIP.webp" class="card-img-top" alt="Couverture du livre">
+                            <img src="OIP.webp" class="card-img-top" alt="Couverture du livre">
                             <span class="book-status status-available">Disponible</span>
                         </div>
                         <div class="card-body">
