--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                 <div class="col-md-3">
                     <div class="card book-card h-100">
                         <div class="position-relative">
-                            <img src="/assets/images/OIP.webp" class="card-img-top" alt="Couverture du livre">
+                            <img src="OIP.webp" class="card-img-top" alt="Couverture du livre">
                             <span class="book-status status-available">Disponible</span>
                         </div>
                         <div class="card-body">
@@ -149,7 +149,7 @@
                 <div class="col-md-3">
                     <div class="card book-card h-100">
                         <div class="position-relative">
-                            <img src="/assets/images/1984.jpeg" class="card-img-top" alt="Couverture du livre">
+                            <img src="1984.jpeg" class="card-img-top" alt="Couverture du livre">
                             <span class="book-status status-available">Disponible</span>
                         </div>
                         <div class="card-body">
@@ -300,3 +300,4 @@
 </body>
 
 </html>
+
