--- a/exchange-history.html
+++ b/exchange-history.html
@@ -152,7 +152,7 @@
                     <div class="row">
                         <div class="col-md-4">
                             <div class="book-cover-container mb-3">
-                                <img src="assets/images/book-placeholder.svg" alt="Couverture du livre" class="img-fluid book-cover">
+                                <img src="book-placeholder.svg" alt="Couverture du livre" class="img-fluid book-cover">
                             </div>
                         </div>
                         <div class="col-md-8">
